--- a/dji_sdk_demo/package.xml
+++ b/dji_sdk_demo/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="amber@todo.todo">amber</maintainer>
+  <maintainer email="me@botao.hu">Botao Hu</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
