--- a/dji_sdk_manifold_read_cam_nv/package.xml
+++ b/dji_sdk_manifold_read_cam_nv/package.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0"?>
 <package>
   <name>dji_sdk_read_cam_nv</name>
-  <version>0.0.0</version>
+  <version>0.1/lkjhy.0</version>
   <description>The nv_cam package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="dji@todo.todo">dji</maintainer>
+  <maintainer email="norman.li@dji.com">Phoenix</maintainer>
 
+  <license>BSD</license>
 
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>DJI</license>
+  <url type="website">http://dev.dji.com/</url>
 
+  <author email="norman.li@dji.com">Phoenix</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>opencv2</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+
   <run_depend>cv_bridge</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>opencv2</run_depend>
@@ -30,10 +28,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
 
-
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
 
   </export>
 </package>
