--- a/dji_sdk/package.xml
+++ b/dji_sdk/package.xml
@@ -25,6 +25,7 @@
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>dji_sdk_lib</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>actionlib</run_depend>
@@ -35,6 +36,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>dji_sdk_lib</run_depend>
 
   <export>
 
