--- a/dji_sdk/CMakeLists.txt
+++ b/dji_sdk/CMakeLists.txt
@@ -5,23 +5,24 @@ project(dji_sdk)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  actionlib
+  actionlib_msgs 
+  dji_sdk_lib
   geometry_msgs
   message_generation
   nav_msgs
+  nodelet
   roscpp
   rospy
   std_msgs
-  actionlib_msgs 
-  actionlib
   tf
-  dji_sdk_lib
 )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
-
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
@@ -30,26 +31,6 @@ catkin_python_setup()
 ################################################
 ## Declare ROS messages, services and actions ##
 ################################################
-
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependencies might have been
-##     pulled in transitively but can be declared for certainty nonetheless:
-##     * add a build_depend tag for "message_generation"
-##     * add a run_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
 add_message_files(
@@ -63,10 +44,10 @@ add_message_files(
   LocalPosition.msg
   PowerStatus.msg
   RCChannels.msg
+  TransparentTransmissionData.msg
   Velocity.msg
   Waypoint.msg
   WaypointList.msg
-  TransparentTransmissionData.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -80,26 +61,26 @@ add_service_files(
   GlobalPositionControl.srv
   LocalPositionControl.srv
   SDKPermissionControl.srv
-  VelocityControl.srv
   SendDataToRemoteDevice.srv
+  VelocityControl.srv
 )
 
 ## Generate actions in the 'action' folder
 add_action_files(
   FILES
+  DroneTask.action
   GlobalPositionNavigation.action
   LocalPositionNavigation.action
   WaypointNavigation.action
-  DroneTask.action
 )
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
+  actionlib_msgs
   geometry_msgs 
   nav_msgs
   std_msgs
-  actionlib_msgs
 )
 
 ###################################
@@ -113,9 +94,9 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-#  LIBRARIES dji_sdk
-  CATKIN_DEPENDS message_runtime actionlib actionlib_msgs geometry_msgs nav_msgs std_msgs tf dji_sdk_lib
-#  DEPENDS system_lib
+  LIBRARIES dji_sdk_nodelet dji_sdk_node
+  CATKIN_DEPENDS message_runtime actionlib actionlib_msgs geometry_msgs nav_msgs std_msgs tf dji_sdk_lib nodelet
+  DEPENDS 
 )
 
 ###########
@@ -128,26 +109,41 @@ catkin_package(
 
 include_directories(
 	include
-    ${catkin_INCLUDE_DIRS}
+  ${catkin_INCLUDE_DIRS}
 )
 
-## Declare a cpp executable
-add_executable(dji_sdk_node
+add_library(dji_sdk_node
   src/dji_sdk_node.cpp 
   src/modules/dji_sdk_node_actions.cpp 
   src/modules/dji_sdk_node_services.cpp 
   src/modules/dji_sdk_node_main.cpp 
 )
 
-## Add cmake target dependencies of the executable/library
-## as an example, message headers may need to be generated before nodes
 add_dependencies(dji_sdk_node
   dji_sdk_generate_messages_cpp)
 
-## Specify libraries to link a library or executable target against
 target_link_libraries(dji_sdk_node
   ${catkin_LIBRARIES}
 )
+
+add_library(dji_sdk_nodelet
+  src/dji_sdk_nodelet.cpp
+  src/modules/dji_sdk_node_actions.cpp 
+  src/modules/dji_sdk_node_services.cpp 
+  src/modules/dji_sdk_node_main.cpp 
+)
+
+add_dependencies(dji_sdk_nodelet
+  dji_sdk_generate_messages_cpp)
+
+target_link_libraries(dji_sdk_nodelet 
+  ${catkin_LIBRARIES}
+)
+
+
+## Add cmake target dependencies of the executable/library
+## as an example, message headers may need to be generated before nodes
+
 
 #############
 ## Install ##
@@ -163,18 +159,18 @@ target_link_libraries(dji_sdk_node
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS dji_sdk dji_sdk_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(TARGETS dji_sdk_node dji_sdk_nodelet 
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN ".svn" EXCLUDE
+)
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
