--- a/dji_sdk_read_cam/package.xml
+++ b/dji_sdk_read_cam/package.xml
@@ -11,24 +11,25 @@
   <url type="website">http://dev.dji.com/</url>
 
   <author email="norman.li@dji.com">Phoenix</author>
+  <author email="me@botao.hu">Botao Hu</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
-  <build_depend>opencv2</build_depend>
+  <build_depend>nodelet</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
 
   <run_depend>cv_bridge</run_depend>
   <run_depend>image_transport</run_depend>
-  <run_depend>opencv2</run_depend>
+  <run_depend>nodelet</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
 
   <export>
-
+    <nodelet plugin="${prefix}/dji_sdk_read_cam_nodelet.xml" />
   </export>
 </package>
