--- a/dji_sdk_read_cam/package.xml
+++ b/dji_sdk_read_cam/package.xml
@@ -22,6 +22,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>tf</build_depend>
 
   <run_depend>cv_bridge</run_depend>
   <run_depend>image_transport</run_depend>
@@ -29,6 +30,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>tf</run_depend>
 
   <export>
     <nodelet plugin="${prefix}/dji_sdk_read_cam_nodelet.xml" />
