--- a/.travis.yml
+++ b/.travis.yml
@@ -103,3 +103,8 @@ script:
   # Testing: Use both run_tests (to see the output) and test (to error out).
   - catkin_make run_tests  # This always returns 0, but looks pretty.
   - catkin_make test  # This will return non-zero if a test fails.
+
+# blacklist
+branches:
+  except:
+    - master
