--- a/dji_sdk_read_cam/package.xml
+++ b/dji_sdk_read_cam/package.xml
@@ -6,13 +6,10 @@
   <description>The nv_cam package</description>
 
   <maintainer email="norman.li@dji.com">Phoenix</maintainer>
-
-  <license>BSD</license>
-
-  <url type="website">http://dev.dji.com/</url>
-
   <author email="norman.li@dji.com">Phoenix</author>
   <author email="me@botao.hu">Botao Hu</author>
+  <license>BSD</license>
+  <url type="website">http://dev.dji.com/</url>
 
   <buildtool_depend>catkin</buildtool_depend>
   
@@ -33,6 +30,6 @@
   <run_depend>tf</run_depend>
 
   <export>
-    <nodelet plugin="${prefix}/dji_sdk_read_cam_nodelet.xml" />
+    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
   </export>
 </package>
